2022-05-16 James D. Trotter <james@simula.no>

        Initial version.

Copyright (C) 2022 James D. Trotter
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.