@@ -1,3 +1,7 @@
+2022-08-29 Sergej Breiter <breiter@nm.ifi.lmu.de>
+
+        Add A64FX cache partitioning directives for Fujitsu C compiler.
+
 2022-05-16 James D. Trotter <james@simula.no>
 
         Initial version.
